<resources>
    <string name="app_name">Fitnes_Hanma</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">Olvidaste tu contraseña?</string>
    <string name="firstName">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="login">Iniciar sesión</string>
    <string name="createAct">Crear cuenta</string>
    <string name="bote_basura">bote_basura</string>
    <string name="boton_mas">boton_mas</string>
    <string name="boton_ver">boton_ver</string>
    <string name="boton_editar">boton_editar</string>
    <string name="search">Search</string>
    <string name="clases">Clases</string>
    <string name="boton_buscar">boton_buscar</string>
    <string name="regresar">regresar</string>
    <string name="cliente">Cliente</string>
    <string name="personal">Personal</string>
    <string name="instructor">Instructor</string>
    <string name="app_id">597709671741-158thjtmnq65k5e0pa681tndvjn4cvj5.apps.googleusercontent.com</string>

    <!-- Item usuarios -->
    <string name="Id_u_Item">Id</string>
    <string name="Uid_u_Item">Uid</string>
    <string name="Nombre_u_Item">Nombre</string>
    <string name="Coreo_u_Item">Correo</string>
    <string name="hora">00:00:00</string>
    <array name="Semana">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </array>

    <string name="seleccionar_dia">Seleccionar día</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>


</resources>