<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.Principal.AdPInstructor"
    android:theme="@style/AdminStatusBar"
    android:background="@color/adbackcolor">

    <ImageView
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:id="@+id/regre"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/admin_backreg"
        android:padding="5dp"
        android:src="@drawable/admin_reg"
        android:contentDescription="@string/regresar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/salsa_font"
        android:text="@string/instructor"
        android:id="@+id/tex"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search"
        android:layout_below="@+id/tex"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/search"
            android:textSize="20sp"
            android:id="@+id/seCli"
            android:textAlignment="center"
            android:background="@drawable/search"
            android:autofillHints=""
            android:inputType="textLongMessage" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/buscar"
            android:background="@drawable/round_back_secondary_100"
            android:padding="12dp"
            android:src="@drawable/search_icon"
            android:contentDescription="@string/boton_buscar"
            android:layout_gravity="center_vertical|end" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/reciveCliente"
        android:background="@drawable/admin_recli"
        android:padding="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        android:layout_below="@+id/search">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:id="@+id/buttons"
            android:textAlignment="center"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/plus"
                android:src="@drawable/admin_add"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/admin_backadd"
                android:padding="5dp"
                android:contentDescription="@string/boton_mas" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:padding="20dp"
            android:id="@+id/listViewInstructor"/>
    </LinearLayout>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_admin_navbar"
        android:name="com.example.fitnes_hanma.Admin.Adnavbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:layout="@layout/a_ad_fragment_adnavbar" />
</RelativeLayout>